# project1

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  EOFTypeAutomaton.cpp  EOFTypeAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IdAutomaton.cpp  IdAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.h  QMarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h  main.cpp
Lab1PassOffCases/1-100/: input2.txt
Lab1PassOffCases/1-70/: testing
